--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "jest",
     "dev": "NODE_ENV=development nodemon ./server/index.js --watch ./server/index.js",
     "build": "next build",
-    "start": "NODE_ENV=production node ./server/index.js"
+    "start": "NODE_ENV=production node ./server/index.js",
+    "directdev": "next"
   },
   "repository": {
     "type": "git",
@@ -27,9 +28,10 @@
     "@shopify/koa-shopify-auth": "^3.1.41",
     "@shopify/koa-shopify-graphql-proxy": "^3.1.2",
     "@shopify/koa-shopify-webhooks": "^2.0.0",
-    "@shopify/polaris": "^4.7.1",
+    "@shopify/polaris": "^4.7.3",
     "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.4.4",
+    "awesome-typescript-loader": "^5.2.1",
     "dotenv": "^8.2.0",
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^2.1.1",
@@ -37,11 +39,13 @@
     "koa": "^2.8.2",
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.3",
-    "next": "^8.1.0",
+    "next": "^9.1.3",
     "next-env": "^1.1.0",
     "react": "^16.10.1",
     "react-apollo": "^2.5.8",
-    "react-dom": "^16.10.1"
+    "react-dom": "^16.10.1",
+    "ts-node": "^8.4.1",
+    "typescript": "^3.7.2"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.6.2",
@@ -56,7 +60,8 @@
     "nodemon": "^1.19.3",
     "prettier": "1.18.2",
     "react-addons-test-utils": "15.6.2",
-    "react-test-renderer": "16.11.0"
+    "react-test-renderer": "16.11.0",
+    "webpack-cli": "^3.3.10"
   },
   "husky": {
     "hooks": {
