--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.2",
     "@babel/register": "^7.6.2",
+    "@material-ui/core": "^4.6.0",
     "@shopify/app-bridge-react": "^1.6.8",
     "@shopify/app-cli-node-generator-helper": "^1.1.2",
     "@shopify/koa-shopify-auth": "^3.1.41",
@@ -44,6 +45,7 @@
     "react": "^16.10.1",
     "react-apollo": "^2.5.8",
     "react-dom": "^16.10.1",
+    "styled-components": "^4.4.1",
     "ts-node": "^8.4.1",
     "typescript": "^3.7.2"
   },
