--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@shopify/koa-shopify-webhooks": "^2.0.0",
     "@shopify/polaris": "^4.7.3",
     "@zeit/next-css": "^1.0.1",
+    "antd": "^3.25.0",
     "apollo-boost": "^0.4.4",
     "awesome-typescript-loader": "^5.2.1",
     "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0",
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^2.1.1",
     "js-cookie": "^2.2.1",
@@ -53,6 +55,7 @@
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-stage-3": "^7.0.0",
     "babel-jest": "24.9.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "babel-register": "^6.26.0",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.15.1",
