--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^16.10.1",
     "styled-components": "^4.4.1",
     "ts-node": "^8.4.1",
+    "typeface-roboto": "0.0.75",
     "typescript": "^3.7.2"
   },
   "devDependencies": {
@@ -59,6 +60,7 @@
     "babel-register": "^6.26.0",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.15.1",
+    "file-loader": "^4.2.0",
     "husky": "^3.0.9",
     "jest": "24.9.0",
     "lint-staged": "^9.4.2",
