--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.6.2",
     "@babel/register": "^7.6.2",
     "@material-ui/core": "^4.6.0",
+    "@material-ui/icons": "^4.5.1",
     "@shopify/app-bridge-react": "^1.6.8",
     "@shopify/app-cli-node-generator-helper": "^1.1.2",
     "@shopify/koa-shopify-auth": "^3.1.41",
@@ -31,6 +32,7 @@
     "@shopify/koa-shopify-webhooks": "^2.0.0",
     "@shopify/polaris": "^4.7.3",
     "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "antd": "^3.25.0",
     "apollo-boost": "^0.4.4",
     "awesome-typescript-loader": "^5.2.1",
@@ -44,6 +46,7 @@
     "koa-session": "^5.12.3",
     "next": "^9.1.3",
     "next-env": "^1.1.0",
+    "node-sass": "^4.13.0",
     "react": "^16.10.1",
     "react-apollo": "^2.5.8",
     "react-dom": "^16.10.1",
