--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "isomorphic-fetch": "^2.1.1",
     "js-cookie": "^2.2.1",
     "koa": "^2.8.2",
+    "koa-mount": "^4.0.0",
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.3",
+    "koa-static": "^5.0.0",
     "next": "^9.1.3",
     "next-env": "^1.1.0",
     "node-sass": "^4.13.0",
