--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "styled-components": "^4.4.1",
     "ts-node": "^8.4.1",
     "typeface-roboto": "0.0.75",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "webpack-dev-server": "^3.9.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.6.2",
@@ -73,6 +74,7 @@
     "prettier": "1.18.2",
     "react-addons-test-utils": "15.6.2",
     "react-test-renderer": "16.11.0",
+    "source-map-loader": "^0.2.4",
     "webpack-cli": "^3.3.10"
   },
   "husky": {
