--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "koa-static": "^5.0.0",
     "next": "^9.1.3",
     "next-env": "^1.1.0",
-    "node-sass": "^4.13.0",
     "react": "^16.10.1",
     "react-apollo": "^2.5.8",
     "react-dom": "^16.10.1",
@@ -70,11 +69,14 @@
     "husky": "^3.0.9",
     "jest": "24.9.0",
     "lint-staged": "^9.4.2",
+    "node-sass": "^4.13.0",
     "nodemon": "^1.19.3",
     "prettier": "1.18.2",
     "react-addons-test-utils": "15.6.2",
     "react-test-renderer": "16.11.0",
+    "sass-loader": "^8.0.0",
     "source-map-loader": "^0.2.4",
+    "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
   "husky": {
